--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,11 +7,8 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
-      - master
-    tags:
-      - '*'
+  release:
+    types: [ published ]
   pull_request:
   workflow_dispatch:
 
@@ -157,7 +154,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [ linux, musllinux, windows, macos, sdist ]
     permissions:
       # Use to sign the release artifacts
       id-token: write
