--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,9 @@ dependencies = [
 ]
 [tool.maturin]
 features = ["pyo3/extension-module"]
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "ruff>=0.11.10",
+]
+
