--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,6 +32,8 @@ jobs:
             target: ppc64le
     steps:
       - uses: actions/checkout@v4
+      - name: Install libssl-dev
+        run: sudo apt-get update && sudo apt-get install libssl-dev
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
@@ -63,6 +65,9 @@ jobs:
             target: armv7
     steps:
       - uses: actions/checkout@v4
+      - name: Install OpenSSL
+        run: |
+          apk add --no-cache openssl-dev pkgconfig
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
