chore(deps): add vendored OpenSSL dependency for cross-platform compatibility

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,8 +40,6 @@ jobs:
           python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
-        env:
-          OPENSSL_DIR: /usr/local/ssl
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
@@ -73,8 +71,6 @@ jobs:
           python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
-        env:
-          OPENSSL_DIR: /usr/local/ssl
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
@@ -157,7 +153,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'release' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     needs: [ linux, musllinux, windows, macos, sdist ]
     permissions:
       # Use to sign the release artifacts
