--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { features = ["extension-module", "auto-initialize", "abi3-py310"], version = "0.24.2" }
-
+openssl = { version = "0.10.72", features = ["vendored"] }
 lettre = { version = "0.11.16", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
 mime_guess = "2.0.5"
 anyhow = "1.0.98"
