--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.8,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "html_email_sender"
+name = "simple_smtp_sender"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Rust",
