--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ name = "simple_smtp_sender"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-pyo3 = { features = ["extension-module", "auto-initialize", "abi3-py310"], version = "0.25.0" }
+pyo3 = { features = ["auto-initialize", "abi3-py310"], version = "0.25.0" }
 openssl = { version = "0.10.72", features = ["vendored"] }
 lettre = { version = "0.11.16", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
 mime_guess = "2.0.5"
 anyhow = "1.0.98"
 pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
+
+[features]
+extension-module = ["pyo3/extension-module"]
