--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,8 @@ mime_guess = "2.0.5"
 anyhow = "1.0.98"
 pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
 
+[dev-dependencies]
+tokio = { version = "1.0", features = ["test-util", "rt", "macros"] }
+
 [features]
 extension-module = ["pyo3/extension-module"]
