--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "simple_smtp_sender"
 version = "0.2.1"
 edition = "2021"
-description = "A Simple SMTP Email Sender with the support of sync or async sending. Powered by PyO3"
+description = "A Simple SMTP Email sender crate with the support of sync or async sending. Can be called from Python. Powered by PyO3."
 repository = "https://github.com/guangyuhe/simple_smtp_sender"
 license = "MIT"
 authors = ["Guangyu He <fredhgy2010@gmail.com>"]
