--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple_smtp_sender"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 description = "A Simple SMTP Email sender crate with the support of sync or async sending. Can be called from Python. Powered by PyO3."
 repository = "https://github.com/guangyuhe/simple_smtp_sender"
@@ -20,6 +20,7 @@ lettre = { version = "0.11.16", features = ["builder", "smtp-transport", "tokio1
 mime_guess = "2.0.5"
 anyhow = "1.0.98"
 pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
+serde = { version = "1.0.219", features = ["derive"] }
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["test-util", "rt", "macros"] }
