--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple_smtp_sender"
-version = "0.2.5"
+version = "0.3.0"
 edition = "2024"
 description = "A Simple SMTP Email sender crate with the support of sync or async sending. Can be called from Python. Powered by PyO3."
 repository = "https://github.com/guangyuhe/simple_smtp_sender"
@@ -14,20 +14,21 @@ exclude = [".github/workflows/CI.yml", "simple_smtp_sender.pyi", ".gitignore", "
 name = "simple_smtp_sender"
 crate-type = ["cdylib", "rlib"]
 
+[target.'cfg(target_os = "linux")'.dependencies]
+openssl = { version = "*", features = ["vendored"] }
+
 [dependencies]
-pyo3 = { features = ["extension-module", "abi3-py310"], version = "0.26.0", optional = true }
-openssl = { version = "0.10.73", features = ["vendored"] }
-lettre = { version = "0.11.18", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
-mime_guess = "2.0.5"
-anyhow = "1.0.99"
-pyo3-async-runtimes = { version = "0.26.0", features = ["attributes", "tokio-runtime"], optional = true }
-serde = { version = "1.0.223", features = ["derive"] }
+pyo3 = { features = ["extension-module", "abi3-py310", "generate-import-lib"], version = "0.27.2", optional = true }
+lettre = { version = "0.11", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
+mime_guess = "2.0"
+anyhow = "1.0"
+pyo3-async-runtimes = { version = "0.27.0", features = ["attributes", "tokio-runtime"], optional = true }
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
-tokio = { version = "1.47.1", features = ["test-util", "rt", "macros"] }
+tokio = { version = "1.48", features = ["test-util", "rt", "macros"] }
 
 [features]
-default = ["python"]
+default = ["rslib"]
 rslib = []
 python = ["dep:pyo3", "dep:pyo3-async-runtimes"]
-extension-module = ["python", "pyo3/extension-module"]
