--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ lettre = { version = "0.11", default-features = false, features = ["builder", "s
 mime_guess = "2.0"
 anyhow = "1.0"
 pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"], optional = true }
+serde-pyobject = { version = "0.8.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
@@ -28,7 +29,7 @@ tokio = { version = "1.49", features = ["test-util", "rt", "macros"] }
 [features]
 default = ["rslib"]
 rslib = []
-python = ["dep:pyo3", "dep:pyo3-async-runtimes"]
+python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:serde-pyobject"]
 
 [[test]]
 name = "unit_tests"
