--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+
+dependencies = [
+    "pydantic",
+]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
 [dependency-groups]
